Completed as per instructions

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "swc"    # what kind of Carpentry (must be either "dc" or "swc")
 venue: "Rutgers University, Camden"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "Business & Science Building, 227 Penn Street, Camden,
+address: "Room 334, Business & Science Building, 227 Penn Street, Camden,
 NJ 08102"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "us"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "39.948646,-75.124021"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "Nov 11-12"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+humandate: "Nov 11-12, 2016"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "9:00 am - 4:00 pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-11-11      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2016-11-12        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Sunil Shende", "Daniel Russo"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Luca Larini", "Adam Oculicz-Kozaryn", "Maneesha Sane"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: ["Luca Larini", "Adam Okulicz-Kozaryn", "Maneesha Sane"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["shende@camden.rutgers.edu", "danrusso@scarletmail.rutgers.edu"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
-etherpad:             # optional: URL for the workshop Etherpad if there is one
+etherpad: "http://pad.software-carpentry.org/2016-11-11-RUCamden"
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
@@ -191,22 +191,22 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     <h3>Nov 11 (Friday)</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>12:45</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:15</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>10:30-10:45</td> <td>Coffee break</td> </tr>
+      <tr> <td>12:00-12:45</td>  <td>Lunch break</td> </tr>
+      <tr> <td>12:45</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>14:15-14:30</td>  <td>Coffee break</td> </tr>
+      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Nov 12 (Sat)</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>09:00</td>  <td>Building programs with Python</td> </tr>
+      <tr> <td>10:30-10:45</td>  <td>Coffee break</td> </tr>
+      <tr> <td>12:00-12:45</td>  <td>Lunch break</td> </tr>
       <tr> <td>12:45</td>  <td>Exploring data with Python/Pandas</td> </tr>
-      <tr> <td>14:15</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>14:15-14:30</td>  <td>Coffee break</td> </tr>
+      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
 </div>
